manifests-cloud-main/network-policies/allow-egress-to-cloud-main-system.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-employee-egress-to-cloud-main-system-debug
  namespace: collin-brown
spec:
  egress:
  - ports:
    - port: 443
      protocol: TCP
    - port: 80
      protocol: TCP
    - port: 22
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cloud-main-system
  podSelector: {}
  policyTypes:
  - Egress
