manifests-cloud-main/network-policies/allow-ingress-from-collin-brown.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-collin-brown-debug
  namespace: cloud-main-system
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: collin-brown
  - ports:
    - port: 8443
      protocol: TCP
    - port: 8080
      protocol: TCP
    - port: 443
      protocol: TCP
    - port: 80
      protocol: TCP
    - port: 22
      protocol: TCP
  podSelector: {}
  policyTypes:
  - Ingress
